--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=SquareGameSpringBoot
+MySql=mysql:mysql-connector-java:8.0.33
+spring.datasource.url=jdbc:mysql://localhost:3306/springjdbc
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.profiles.active
