--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springjdbc
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/SquareGames?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
