BDD Working + create user endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=SquareGameSpringBoot
 
 # Configuration MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/springjdbc
+spring.datasource.url=jdbc:mysql://localhost:3306/SquareGames
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Activation du profil MySQL par défaut
-spring.profiles.active=mysql
+spring.profiles.active=SquareGames
