--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=SquareGameSpringBoot
 
 # Activation du profil MySQL par défaut
 spring.profiles.active=mysql
+server.port=8081
